# duckpg

./: .gitignore  pyproject.toml
django_duckdb/: base.py  utils.py
quack/: db_router.py
quack/quack/: asgi.py  settings.py  urls.py  wsgi.py
